[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "opslib-cloudflare"
description = "Cloudflare components for Opslib"
version = "0.0.1"
dependencies = [
    "pyopslib",
]

[project.optional-dependencies]
dev = [
    "pyright",
]

[tool.setuptools]
packages = [
    "opslib_cloudflare",
]
